# Grain-Link

./: .gitignore  BUILD_EXECUTION_STEPS.md  BUILD_PASSWORD_GUIDE.md  BUILD_TROUBLESHOOTING.md  FILE_LOCK_ERROR_SOLUTION.md  FIX_SUMMARY_2026-02-17.md  GITHUB_ACTIONS_SETUP.md  GITHUB_RELEASES_SETUP.md  IMPLEMENTATION_SUMMARY.md  MEDIA_DOWNLOAD.md  QUICK_BUILD_GUIDE.md  README.md  SETUP_COMPLETE.md  SIGNATURE_GUIDE.md  UPDATER_INTEGRATION_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build-release.yml  build.yml
electron/: logger.cjs  main.cjs  mediaUpdater.cjs  preload.cjs  updateChecker.cjs
scripts/: zip-media.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: restClient.ts  sseClient.ts
src/components/: ContextMenu.tsx  ImageHeader.tsx  LocalVideoPlayer.tsx  ShopCard.tsx  ShopInfoOverlay.tsx  UpdateDialog.tsx
src/config/: default-settings.json
src/hooks/: useActiveShopByVideo.ts  useAppSettings.ts  useAutoUpdate.ts  useHeartbeat.ts  useMediaDownload.ts
src/logs/: logging.ts
src/screens/: BootScreen.tsx  GidoApp.tsx  PatchScreen.tsx  ShopListView.tsx  VideoSignageView.tsx
src/types/: electron.d.ts  logging.ts  settings.ts  shop.ts
src/utils/: format.ts  settings.ts  shopData.ts
~/: TAURI_KEY_PASSWORD.sh  TAURI_KEY_PASSWORD.sh.pub
