[package]
name = "grain-link"
version = "0.2.2"
description = "Grain Link Tauri application"
authors = ["Toei Techno International Inc."]
license = "UNLICENSED"
edition = "2021"
rust-version = "0.2.2"

[build-dependencies]
tauri-build = { version = "0.2.2", features = [] }

[dependencies]
tauri = { version = "0.2.2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
serde = { version = "0.2.2", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2.2", features = ["full"] }
reqwest = { version = "0.2.2", features = ["blocking", "json"] }
dirs = "5.0"



[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"




